# library-registry

./: .codespellrc  .ecrc  .editorconfig  .gitignore  .licensed.yml  .prettierignore  AsyncWebOTA.json  C3_Mini_Welcome_RGB_Sequence  Controlador_Vergatario.properties  DuinoCoin  FAQ.md  LICENSE  LICENSE.txt  Mstor.cpp  Mstor.h  Mstorcfg.h  README.md  README_EN.md  Read.md  Taskfile.yml  durian  easyarduino.json  fuzzy_mamdani.json  keywords.txt  library.properties  library_index.tar.bz2  maintenance-requests.md  pyproject.toml  registry.txt  repositories.txt
.github/: .markdown-link-check.json  .markdownlint.yml  .yamllint.yml  CONTRIBUTING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  release-removal.yml  rename.yml
.github/label-configuration-files/: labels.yml
.github/workflows/: check-config.yml  check-docs.yml  check-general-formatting-task.yml  check-go-dependencies-task.yml  check-go-task.yml  check-go.yml  check-license.yml  check-markdown.yml  check-prettier-formatting-task.yml  check-prettier-formatting.yml  check-python-task.yml  check-registry.yml  check-toc.yml  (+10 more)
configs/: prayertimes.yml
example/: platformio.ini
examples/: sigmoid.ino
libraries/: FastGPIO.yml  QuickAPConnect.yml  STM32RomWebFlasher.json  Ultrasonic-Sensor-Library.json  XLOT_QuadSwitch.txt  dwiBus.yml  library_index.json  schneidermodbustcp.json
manager/: go.mod  go.sum  main.go  main_test.go
remove/: 7SemiSHT4x_Lib.yml
repositories/: VNTiengVietDuino
src/: ConfigPortal32.h  NikkiClientESP.cpp  NikkiClientESP.h  fnn.cpp  fnn.h
(+237 files in other folders)
