[tool.black]
line-length = 120

[tool.poetry]
name = "library-registry"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "CC0-1.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
invoke = "^2.2.0"
black = "^23.10"
flake8 = "^6.1.0"
pep8-naming = "^0.13.3"
yamllint = "^1.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
