[tool.black]
line-length = 120

[tool.poetry]
name = "library-registry"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "CC0-1.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
invoke = "^2.2.0"
black = "^25.1"
flake8 = "^7.1.1"
pep8-naming = "^0.14.1"
yamllint = "^1.35.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
