[tool.black]
line-length = 120

[tool.poetry]
name = "library-registry"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "CC0-1.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
yamllint = "^1.37.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
